--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-$screen-color: rgb(245, 252, 245);
+$screen-color: white;
 
 body{
   width: 1300px;
@@ -23,14 +23,14 @@ main{
   padding: 30px;
   color: darken($screen-color, 20%);
   background-color: $screen-color;
-  border: 1px solid transparent;
+  border: 1px solid darken($screen-color, 20%);
 }
 
 #desktop{
   height: 350px;
   padding: 30px;
   color: darken($screen-color, 20%);
-  border: 1px solid transparent;
+  border: 1px solid darken($screen-color, 20%);
 }
 
 #assignments{
@@ -63,7 +63,7 @@ main{
   margin: 5px;
   padding-left: 10px;
   text-align: center;
-  border: 1px solid transparent;
+  border: 1px solid rgb(35, 75, 91);
 }
 .file{
   display: inline-block;
@@ -101,16 +101,18 @@ main{
 #terminal-wrapper{
   width: 100%;
   height: 200px;
-  padding: 20px;
-  border: 1px solid black;
+  padding: 10px;
+  background-color: rgb(206, 247, 250);
+  border: 1px solid rgb(138, 166, 168);
 }
 
 #terminal {
   display: inline-block;
   width: 700px;
-  height: 220px;
+  height: 200px;
   overflow: scroll;
   padding-left: 10px;
+  background-color: white;
   border: 1px solid black;
   li, label, input{
     font-size: 16px;
@@ -128,12 +130,15 @@ main{
 }
 
 #instruction-wrapper{
-  height: 200px;
+  float: right;
+  height: 180px;
   width: 400px;
+  margin-right: 10px;
   padding: 10px;
   display: inline-block;
   vertical-align: top;
-  border: 1px solid black;
+  background-color: white;
+  border: 1px solid rgb(138, 166, 168);
   p{
     span{
       color: green;
@@ -141,11 +146,14 @@ main{
   }
   ul{
     li{
+      list-style-type: none;
+      color: green;
       span{
         color: red;
       }
     }
     li:last-child{
+      color: black;
       display: none;
     }
   }
