--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,13 @@
 $screen-color: white;
 
 body{
-  width: 1300px;
+  width: 100%;
   overflow: hidden;
   font-family: sans-serif;
 }
 
 main{
-  width: 1200px;
+  width: 90%;
   margin: 0 auto;
   padding: 10px;
   overflow: hidden;
@@ -41,6 +41,7 @@ main{
 }
 #repository{
   display: none;
+  border: none;
 }
 #git-staging{
   display: inline-block;
